# Master_thesis

./: README.md  debug_ref.sh  plotanje_snimki.m  proba.m  process_bag.sh
adagrad/: angles.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_command.txt  pose.txt  pose_ref.txt  position.txt  udarci.txt  velocity.txt
adam/: angles.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_command.txt  pose.txt  pose_ref.txt  position.txt  udarci.txt  velocity.txt
glog/: Makefile  Makefile.in  config.status  configure  demangle_unittest  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog/.libs/: demangle_unittest  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog/autom4te.cache/: output.0  requests  traces.0  traces.1
glog/src/glog/: logging.h
morus_uav_gazebo/morus_control/: CMakeLists.txt
morus_uav_gazebo/morus_control/include/morus_control/: AdaGrad.h  Adam_MPC.h  MPC_solver.h  PID.h  RMS_Prop_MPC.h  RMS_Prop_with_Nester_momentum_MPC.h  attitude_mpc_ctl_adam.h  attitude_mpc_ctl_ceres.h  attitude_mpc_ctl_node_adam.h  attitude_mpc_ctl_node_ceres.h  example_tf_listener.h  mpc_mm_ceres.h  mpc_mm_ceres_old.h
morus_uav_gazebo/morus_control/launch/: morus_control primjer.launch  morus_control.launch  morus_control_mpc_adam.launch  morus_control_mpc_ceres.launch
morus_uav_gazebo/morus_control/src/: PID.cpp  attitude_mpc_ctl.cpp  attitude_mpc_ctl_adam.cpp  attitude_mpc_ctl_ceres.cpp  copy_steady_state.cpp  example_tf_listener.cpp  example_tf_listener_fncs.cpp  height_ctl.py  height_yaw_ctl.py  height_yaw_ctl_40_ms.py  mass_ctl_attitude_40_ms.py  mpc_mm_ceres.cpp  mpc_mm_ceres_old.cpp  probni.cpp  test_derivacije.cpp  test_steady_state.cpp  test_steady_state_heuristic.cpp  velocity_in_base_link.cpp
morus_uav_gazebo/morus_control/src/MPC_solvers/: AdaGrad.cpp  Adam_MPC.cpp  RMS_Prop_MPC.cpp  RMS_Prop_with_Nester_momentum_MPC.cpp
morus_uav_gazebo/morus_control/src/nodes/: attitude_mpc_ctl_node_adam.cpp  attitude_mpc_ctl_node_ceres.cpp
morus_uav_gazebo/morus_description/urdf/: morus.gazebo.xacro
morus_uav_gazebo/morus_gazebo/launch/: morus_multirotor_empty_world_ctl_joy.launch  morus_multirotor_empty_world_ctl_mpc-vpc.launch  morus_multirotor_empty_world_ctl_mpc_adam.launch  morus_multirotor_empty_world_ctl_mpc_ceres.launch  spawn_morus_multirotor.launch
morus_uav_gazebo/morus_gazebo/worlds/: morus.world
proba_test_adam/: CMakeLists.txt  package.xml
proba_test_adam/include/proba_test_adam/: probaAdam_MPC.h
proba_test_adam/src/: probaAdam_MPC.cpp  probaTestAdam.cpp
trajec/: angles.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_command.txt  pose.txt  pose_ref.txt  position.txt  udarci.txt  velocity.txt
